tests/ui/type-alias-impl-trait/issue-68368-non-defining-use.stderr
error[E0792]: expected generic type parameter, found `()`
  --> $DIR/issue-68368-non-defining-use.rs:10:15
   |
LL | type Alias<'a, U> = impl Trait<U>;
   |                - this generic parameter must be used with a generic type parameter
...
LL | fn f<'a>() -> Alias<'a, ()> {}
   |               ^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0792`.
